--- a/src/Component/SubTitle/sub-title.module.scss
+++ b/src/Component/SubTitle/sub-title.module.scss
@@ -14,3 +14,9 @@
     font-size: medium;
   }
 }
+
+@media (min-width: 1024px) {
+  .subTitle {
+    font-size: 32px;
+  }
+}
